--- a/nix/m1-support/kernel/config
+++ b/nix/m1-support/kernel/config
@@ -4822,7 +4822,7 @@ CONFIG_DRM_GEM_SHMEM_HELPER=y
 # CONFIG_DRM_RADEON is not set
 # CONFIG_DRM_AMDGPU is not set
 # CONFIG_DRM_NOUVEAU is not set
-CONFIG_DRM_VGEM=y
+CONFIG_DRM_VGEM=n
 # CONFIG_DRM_VKMS is not set
 # CONFIG_DRM_VMWGFX is not set
 # CONFIG_DRM_UDL is not set
@@ -4941,7 +4941,8 @@ CONFIG_DRM_SIMPLEDRM_BACKLIGHT=y
 # CONFIG_DRM_TIDSS is not set
 # CONFIG_DRM_GUD is not set
 # CONFIG_DRM_SSD130X is not set
-# CONFIG_DRM_APPLE is not set
+CONFIG_DRM_APPLE=y
+CONFIG_DRM_ASAHI=y
 # CONFIG_DRM_LEGACY is not set
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=y
 CONFIG_DRM_NOMODESET=y
